--- a/packages/sdk-react-native/package.json
+++ b/packages/sdk-react-native/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.28.4",
+    "@maany/cosmos-sign-doc": "workspace:*",
     "@maanyio/mpc-coordinator-rn": "^0.1.4",
     "@maanyio/mpc-rn-bare": "^0.1.5",
     "@noble/hashes": "^1.8.0"
