included cosmos-tx package

--- a/examples/react-native/expo-rn-wallet/package.json
+++ b/examples/react-native/expo-rn-wallet/package.json
@@ -14,6 +14,8 @@
     "@babel/runtime": "^7.25.0",
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.3",
+    "@maany/cosmos-sign-doc": "file:../../../packages/cosmos-sign-doc",
+    "@maany/cosmos-tx": "file:../../../packages/cosmos-tx",
     "@maany/sdk-react-native": "file:../../../packages/sdk-react-native",
     "@maanyio/mpc-coordinator-rn": "^0.1.1",
     "@maanyio/mpc-rn-bare": "^0.1.3",
@@ -43,7 +45,10 @@
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "semver": "^7.7.3",
-    "whatwg-fetch": "^3.6.20"
+    "whatwg-fetch": "^3.6.20",
+    "protobufjs": "^7.4.0",
+    "@noble/hashes": "^1.8.0",
+    "@scure/base": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
